# file-tagger-pro

./: .gitignore  CMakeLists.txt  README.md  qml.qrc
qml/: Style.qml  main.qml  qmldir
qml/components/: DetailPanel.qml  FileList.qml  FileTree.qml  FilterDialog.qml  LogViewer.qml  MainContainer.qml  Settings.qml  Splitter.qml  StatusBar.qml  TagList.qml  TagToolBar.qml  TopToolBar.qml  VideoThumbnail.qml  qmldir
qml/dialogs/: DatabaseViewerDialog.qml  FileTagDialog.qml  FilterDialog.qml  FolderPickerDialog.qml  LogViewerDialog.qml  PlayerSettingsDialog.qml  SettingsWindow.qml  SpriteDialog.qml  TagEditDialog.qml  qmldir
qml/settings/: DatabaseSettings.qml  FileTypeSettings.qml  GeneralSettings.qml  LogSettings.qml  PlayerSettings.qml  SettingsStyle.qml  TagSettings.qml  qmldir
qml/utils/: Logger.qml  WindowControlButton.qml  WindowResizer.qml  WindowTitleBar.qml  qmldir
resources/: resources.qrc
src/: main.cpp
src/core/: databasemanager.cpp  databasemanager.h  filesystemmanager.cpp  filesystemmanager.h  tagmanager.cpp  tagmanager.h
src/models/: filedata.cpp  filedata.h  filelistmodel.cpp  filelistmodel.h  tag.cpp  tag.h
src/utils/: defaultapps.cpp  defaultapps.h  filetypes.h  logger.cpp  logger.h  previewgenerator.cpp  previewgenerator.h  spritegenerator.cpp  spritegenerator.h
